--- a/index.html
+++ b/index.html
@@ -1,27 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>HCN</title>
+    <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="style.css">
+    <title>HCN</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Crimson+Pro:ital,wght@0,400;0,700;1,400;1,700&family=Space+Mono&family=Work+Sans:wght@400;700;900&display=swap"
+          rel="stylesheet">
+
 </head>
 <body>
 <header>
     <h1 class="logo"><a href="index.html">HippieChick Noms</a></h1>
     <nav>
         <ul>
-            <li>
-                <a href="#">Home</a>
-                <a href="#">About</a>
-                <a href="#">Connect</a>
-                <a href="#">product</a>
-            </li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Connect</a></li>
+            <li><a href="#">product</a></li>
         </ul>
     </nav>
 </header>
 <main>
+    <section class="hero">
+        <h2 class="section-title">No sugar. No Oil. All Real Food.</h2>
+    </section>
+
     <Section class="intro">
-        <h2 class="section-title">We are Nothern Ohio `s first <span>oil-free</span> and <span>sugar-free</span>
+        <h2 class="section-title-small">We are Nothern Ohio`s first <span class="text-primary">oil-free</span> and
+            <span class="text-primary">sugar-free</span>
             granola company.</h2>
     </Section>
 
@@ -57,22 +65,22 @@
             one of the options below
         </p>
         <div class="btn-group">
-            <a href="" class="btn btn-primary"></a>
-            <a href="" class="btn btn-primary"></a>
-            <a href="" class="btn btn-primary"></a>
+            <a href="" class="btn btn-primary">email</a>
+            <a href="" class="btn btn-primary">facebook</a>
+            <a href="" class="btn btn-primary">instagram</a>
         </div>
     </section>
 
     <section class="product-showcase">
         <header>
-            <h2 class="section-title"></h2>
+            <h2 class="section-title text-primary">Some of our product</h2>
         </header>
 
         <div class="products">
             <div class="product">
                 <img src="img/img/BFC.png" alt="" class="product__img"/>
+                <h3 class="product__title">Bananas for Coconuts</h3>
                 <div class="product__content">
-                    <h3 class="product__title">Bananas for Coconuts</h3>
                     <p>
                         Our most snackable granola is a combination of dehydrated
                         banana, coconut flakes and chia seeds, mixed with our three
@@ -86,14 +94,13 @@
                         buckwheat†, coconut flakes†, dried banana†, chia seeds†, coconut
                         milk† (organic coconuts, water, organic guar gum).
                     </p>
-                    <p class="fineprint">†Certified Organic</p>
+                    <p class="fine-print">†Certified Organic</p>
                 </div>
 
                 <div class="product">
                     <img src="img/img/pbc.png" alt="" class="product-img">
                     <div class="product__content">
                         <h3 class="product__title">Mark's Peanut Butter Chocolate</h3>
-
                         <p>
                             Christopher’s chocoholic dad, Mark, is the inspiration behind
                             this classic combination. With freshly made peanut butter, cacao
@@ -105,15 +112,13 @@
                             <strong>Ingredients:</strong> Oats†, millet†, date syrup†,
                             buckwheat†, peanut butter†, peanuts†, cacao nibs†, cinnamon†.
                         </p>
-                        <p class="fineprint">†Certified Organic</p>
+                        <p class="fine-print">†Certified Organic</p>
                     </div>
 
                     <div class="product">
                         <img src="img/img/cyoa.png" alt="" class="product__img"/>
-
                         <div class="product__content">
                             <h3 class="product__title">Choose Your Own Adventure</h3>
-
                             <p>
                                 Named after those great books you used to read as a kid, this
                                 granola lets you choose what you want in it. Our original flavor
@@ -125,7 +130,7 @@
                                 <strong>Ingredients:</strong> Date syrup†, oats†, buckwheat†,
                                 millet†, cinnamon†, vanilla†, ginger†, cardamom.
                             </p>
-                            <p class="fineprint">†Certified Organic</p>
+                            <p class="fine-print">†Certified Organic</p>
                         </div>
                     </div>
                 </div>
